--- a/examples/react-client/package.json
+++ b/examples/react-client/package.json
@@ -1,15 +1,15 @@
 {
   "private": true,
   "name": "intly-example-react-client",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "true"
   },
   "dependencies": {
-    "intly": "0.0.0",
-    "intly-react": "0.0.0",
+    "intly": "^0.0.1-alpha.0",
+    "intly-react": "^0.0.1-alpha.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts-ts": "3.1.0"
