--- a/examples/react-ssr/package.json
+++ b/examples/react-ssr/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "intly-example-react-ssr",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "scripts": {
     "start": "node dist/server/index.js",
     "serve": "nodemon",
@@ -18,8 +18,8 @@
     "@types/express": "^4.16.0",
     "express": "^4.16.3",
     "glob": "^7.1.3",
-    "intly": "0.0.0",
-    "intly-react": "0.0.0",
+    "intly": "^0.0.1-alpha.0",
+    "intly-react": "^0.0.1-alpha.0",
     "nodemon": "^1.18.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
