--- a/packages/intly-react/package.json
+++ b/packages/intly-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "intly-react",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -34,7 +34,7 @@
   ],
   "devDependencies": {
     "@types/react": "^16.4.16",
-    "intly": "0.0.0",
+    "intly": "^0.0.1-alpha.0",
     "react": "^16.5.2",
     "typescript": "^3.1.1"
   },
