--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,30 @@
 version: 2
+
+references:
+  yarn_cache_config: &yarn_cache_config
+    key: dependencies-{{ .Branch }}-{{ checksum "yarn.lock" }}-{{ checksum "package.json" }}
+    paths:
+      - node_modules
+
+  yarn_restore_cache: &yarn_restore_cache
+    restore_cache:
+      <<: *yarn_cache_config
+      name: Restore yarn cache
+
+  yarn_save_cache: &yarn_save_cache
+    save_cache:
+      <<: *yarn_cache_config
+      name: Save yarn cache
+
 jobs:
   build:
     docker:
       - image: circleci/node:10
-    working_directory: ~/repo
+    working_directory: ~/workspace
     steps:
       - checkout
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          - v1-dependencies-
+      - *yarn_restore_cache
       - run: yarn --pure-lockfile
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+      - *yarn_save_cache
       - run: yarn build
       - run: yarn test
