--- a/examples/react-ssr/package.json
+++ b/examples/react-ssr/package.json
@@ -20,19 +20,20 @@
     "glob": "^7.1.3",
     "intly": "^0.0.1-alpha.0",
     "intly-react": "^0.0.1-alpha.0",
-    "nodemon": "^1.18.4",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "styled-components": "^3.4.10",
-    "ts-loader": "^5.2.1",
-    "webpack": "^4.20.2",
+    "nodemon": "^1.18.9",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "styled-components": "^4.1.3",
+    "ts-loader": "^5.3.2",
+    "webpack": "^4.28.3",
     "webpack-clean-obsolete-chunks": "^0.4.0",
     "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
-    "@types/react": "^16.4.16",
+    "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.8",
+    "@types/styled-components": "^4.1.4",
     "glob": "^7.1.3",
     "npm-run-all": "^4.1.3",
     "typescript": "^3.1.1"
