--- a/package.json
+++ b/package.json
@@ -7,29 +7,40 @@
     "publish": "lerna publish",
     "build": "lerna exec yarn build",
     "test": "lerna exec yarn test",
-    "watch": "echo 'TODO: watch'",
     "lint": "tslint -p tsconfig.json -t stylish",
     "format": "prettier --config prettier.config.js --write '**/*.+(ts|tsx|js|md|json)'",
     "example:react-client": "yarn workspace intly-example-react-client start",
     "example:react-ssr": "yarn workspace intly-example-react-ssr dev"
   },
   "engines": {
-    "node": ">=9.0.0",
-    "yarn": ">=1.3.2"
+    "node": ">=10.10.0",
+    "yarn": ">=1.12.0"
   },
   "devDependencies": {
-    "lerna": "^3.4.1",
+    "husky": "^1.3.1",
+    "lerna": "^3.8.1",
+    "lint-staged": "^8.1.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.14.3",
     "rimraf": "^2.6.2",
-    "tslint": "^5.11.0",
+    "tslint": "^5.12.0",
     "tslint-config-prettier": "^1.15.0",
-    "tslint-microsoft-contrib": "^5.2.1",
+    "tslint-microsoft-contrib": "^6.0.0",
     "typescript": "^3.1.1"
   },
   "workspaces": [
     "packages/*",
     "examples/*"
   ],
-  "dependencies": {}
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --config prettier.config.js --write '**/*.+(ts|tsx|js|md|json)'",
+      "git add"
+    ]
+  }
 }
